# BookFiler-Widget-QT-Task-Manager

./: CMakeLists.txt  README.md
dev/: readme.md
include/BookFiler-Widget-QT-Task-Manager/: Interface.hpp
reference/: readme.md
resources/: example00.db  readme.md
src/: CMakeLists.txt  readme.md
src/QModel/: SqliteModel.cpp  SqliteModel.hpp  SqliteModelIndex.hpp  SqliteModelTest.hpp
src/UI/: TaskItem.cpp  TaskItem.hpp  TaskList.cpp  TaskList.cpp.orig  TaskList.hpp  TaskToolBar.cpp  TaskToolBar.hpp  WidgetTaskItem.cpp  WidgetTaskItem.hpp  WidgetTaskList.cpp  WidgetTaskList.hpp  WidgetTaskToolBar.cpp  WidgetTaskToolBar.hpp
src/UI/Tests/: CMakeLists.txt  WidgetTaskItemTest.cpp  WidgetTaskListTest.cpp
src/core/: SqliteQueryEngine.hpp  config.hpp
src/core/Tests/: CMakeLists.txt  sqliteenginetest.cpp
src_example/: readme.md
src_example/example00/: CMakeLists.txt  main.cpp
src_example/example01/: CMakeLists.txt  main.cpp
